# deskbridge

./: .gitmodules  Cargo.toml  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
runtime/aoda-bridge/: Cargo.toml
runtime/aoda-bridge/src/: lib.rs
