[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'pallets/template',
    'runtime/aoda-bridge',

    "modules/*",
	"modules/evm-utiltity/macro",
    "primitives",

    "orml/auction",
	"orml/authority",
	"orml/bencher",
	"orml/benchmarking",
	"orml/currencies",
	"orml/gradually-update",
	"orml/nft",
	"orml/oracle",
	"orml/oracle/rpc",
 	"orml/oracle/rpc/runtime-api",
	"orml/rewards",
	"orml/tokens",
	"orml/traits",
	"orml/utilities",
	"orml/vesting",
	"orml/weight-gen",
	"orml/weight-meter",
	"orml/xcm",
	"orml/xtokens",
	"orml/xcm-support",
	"orml/unknown-tokens",

    "ecosystem-modules/stable-asset/lib/stable-asset",

]
